Added tooltips to roles

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/person/show.jspx
@@ -93,6 +93,7 @@
 			<script type='text/javascript' src='/resources/javascript/person/linkUser.js'><!-- keep me --></script>
 			<script type='text/javascript' src='/resources/javascript/person/roles.js'><!-- keep me --></script>
 			<script type='text/javascript' src='/resources/javascript/person/update.js'><!-- keep me --></script>
+			<script type='text/javascript' src='/resources/javascript/person/explainRoles.js'><!-- keep me --></script>
 			<style type='text/css'>
 				#personInfo .panel-heading a:after {
 				    font-family: 'Glyphicons Halflings';
@@ -238,7 +239,8 @@
 												<ul>
 													<c:forEach var="role" items="${command.availableRoles}">
 														<fmt:message key="person.show.${role}" var="textRole" />
-														<li class='${role}'><span class='glyphicon glyphicon-question-sign explainRole' data-toggle="tooltip" data-role='${role}'>&#160;</span>${textRole}: 
+														<fmt:message key="person.show.${role}Tooltip" var="textRoleTooltip" />
+														<li class='${role}'><span class='glyphicon glyphicon-question-sign explainRole' data-toggle="tooltip" data-placement="left" title="${textRoleTooltip}" data-role='${role}'>&#160;</span>${textRole}: 
 															<c:forEach var="relation" items="${post.rprs}">
 																<c:if test="${relation.relatorCode eq role}">
 																	<span class='rpr_${relation.id}'>
@@ -286,7 +288,8 @@
 												<ul>
 													<c:forEach var="role" items="${command.availableRoles}">
 														<fmt:message key="person.show.${role}" var="textRole" />
-														<li class='${role}'>${textRole}: 
+														<fmt:message key="person.show.${role}Tooltip" var="textRoleTooltip" />
+														<li class='${role}'><span class='glyphicon glyphicon-question-sign explainRole' data-toggle="tooltip" data-placement="left" title="${textRoleTooltip}" data-role='${role}'>&#160;</span>${textRole}: 
 															<c:forEach var="relation" items="${post.rprs}">
 																<c:if test="${relation.relatorCode eq role}">
 																	<span class='rpr_${relation.id}'>
