--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/disambiguation.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/disambiguation.jspx
@@ -106,7 +106,10 @@
 								<c:forEach var='personName' items="${command.suggestedPersonNames}">
 									<div class="list-group-item">
 										<a class='btnLinkPerson' data-toggle="modal"  data-target="#linkPerson" href="#linkPerson" data-firstName="${personName.firstName}" data-lastName="${personName.lastName}" data-person-name-id='${personName.id}' data-person-id='${personName.personId}'>
-											${personName.lastName}, ${personName.firstName}, ${personName.person.academicDegree}
+											${personName.lastName}, ${personName.firstName}, ${personName.person.academicDegree} 
+											<c:if test="${personName.person.disambiguatingPublication.post ne null}">
+												, ${personName.person.disambiguatingPublication.post.resource.title}
+											</c:if>
 										</a>
 									</div>
 								</c:forEach>
