removed HashId enum wrapper

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/export/bibtex/htmlOutput.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/export/bibtex/htmlOutput.jspx
@@ -5,16 +5,16 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
+	xmlns:spring="http://www.springframework.org/tags"
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:output="urn:jsptagdir:/WEB-INF/tags/bstags/export/bibtex"> 
 	
-<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
+	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
-<!-- to get correct hash IDs for URLs  -->
-<jsp:useBean id="hash" class="org.bibsonomy.util.wrapper.HashIDBean" scope="application"/>
-  
+	<spring:eval var="intraHashId" expression="T(org.bibsonomy.common.enums.HashID).INTRA_HASH.id" />
+
 <html>
   <head>
 	<!--+ 
@@ -43,7 +43,8 @@
 			</c:forEach>. 
         </span></c:if>
         <!-- title  -->
-        <span class="entry_title"><a href="${properties['project.home']}bibtex/${hash.intra.id}${bib.intraHash}/${fn:escapeXml(post.user.name)}">${mtl:cleanBibtex(bib.title)}</a>. </span>
+        <!-- TODO: use url generator -->
+        <span class="entry_title"><a href="${properties['project.home']}bibtex/${intraHashId}${bib.intraHash}/${fn:escapeXml(post.user.name)}">${mtl:cleanBibtex(bib.title)}</a>. </span>
         <!-- editor -->
         <c:if test="${not empty bib.editor}"><span class="entry_editor">In 
         	<c:forEach var="person" items="${bib.editor}" varStatus="loopStatus">
@@ -74,7 +75,7 @@
         <!-- year      --><c:if test="${not empty bib.year}"><span class="entry_year"><c:out value="${mtl:getDate(bib.day, bib.month, bib.year, locale)}"/>. </span></c:if>
 
         <!-- tags & url -->
-        <output:tagsUrl post="${post}"/>      
+        <output:tagsUrl post="${post}"/>
         
       </p>
     </c:forEach>
