--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/viewabletag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/viewabletag.jspx
@@ -74,7 +74,7 @@
 			</div>
 			
 			<!-- group members -->
-			<rc:members requPath="${requPath}" users="${command.group.users}"/>
+			<rc:members group="${command.group}"/>
 			
 			<!-- related tags -->
 			<li>
