--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/group.jspx
@@ -45,10 +45,10 @@
 								<fmt:param>${fn:escapeXml(command.group.name)}</fmt:param>
 							</fmt:message>
 							<button:linkButton
-					   			title="${joinGroup}"
-					   			href="/joinGroup?group=${fn:escapeXml(command.group.name)}"
-					   			image="${resdir}/image/starblue_unselected.png"
-					   		>
+								title="${joinGroup}"
+								href="/joinGroup?group=${fn:escapeXml(command.group.name)}"
+								image="${resdir}/image/starblue_unselected.png"
+							>
 								<jsp:attribute name="text">
 									<fmt:message key="joinGroup"/>
 								</jsp:attribute>
@@ -59,10 +59,10 @@
 			</c:if>
 					
 			<!-- group members -->
-			<rc:members requPath="${requPath}" users="${command.group.users}"/>
+			<rc:members group="${command.group}" />
 			
 			<!-- link to discussed posts of the group -->
-			<li>				
+			<li>
 				<span class="sidebar_h"><fmt:message key="post.resource.discussion.headline"/></span>
 				<ul class="discussionSidebarContent sidebar_collapse_content">
 					<li>
