--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewable.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewable.jspx
@@ -26,7 +26,7 @@
 		
 		<jsp:attribute name="sidebar">
 			<ul>		
-				<rc:members requPath="${requPath}" users="${command.group.users}"/>
+				<rc:members group="${command.group}"/>
 				<li>
 					<span class="sidebar_h"><fmt:message key="tags"/></span>
 					<tags:cloud requPath="${requPath}" cmd="${command.tagcloud}" showTooltips="${command.context.loginUser.settings.tagboxTooltip}"/>
