--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewabletag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/viewabletag.jspx
@@ -60,7 +60,7 @@
 			</div>				
 			
 			<!-- group members -->
-			<rc:members requPath="${requPath}" users="${command.group.users}"/>
+			<rc:members group="${command.group}"/>
 			
 			<!-- related tags -->
 			<li>
