--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/HistoryBib.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/HistoryBib.jspx
@@ -60,7 +60,7 @@
 				<rc:history listView="${command.bibtex}"
 						loginUserName="${command.context.loginUser.name}"
 						disableListNavigation="${disableListNavigation}"
-						requPath="${requPath}" isPub="true">				
+						requPath="${requPath}" isPub="true" isGoldStandard="false">				
 				</rc:history>
 			</div>
 		</div>
