deactivating broken stuff for now Needs to be fixed though

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/group.jspx
@@ -42,7 +42,7 @@
 					<div class="pull-right">
 						<group:groupcv group="${command.group}"/>
 					</div>
-					<group:name group="${command.group}"/>
+					<!--<group:name group="${command.group}"/>-->
 				</li>
 					
 				<!-- link to join group -->
